--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
 
 				var line;
 				var triangle;
+
+				var finalPolygons = [];
 				document.addEventListener('keydown', function(event) {
 					if(event.keyCode == 32) {
 						spaceHeld = true;
@@ -107,6 +109,9 @@
 					if(event.keyCode == 13) {
 						for(var point of basePoints) {
 							point.visible = true;
+						}
+						for(var polygon of finalPolygons) {
+							scene.add(polygon);
 						}
 						render();
 					}
@@ -146,6 +151,10 @@
 								triangle = new THREE.Mesh(triangleGeometry, triangleMaterial);
 
 								scene.add(triangle);
+
+								if(spaceHeld && !finalPolygons.includes(triangle)) {
+									finalPolygons.push(triangle);
+								}
 							}
 						}
 
@@ -154,6 +163,9 @@
 				});
 
 				document.addEventListener('keyup', function(event) {
+					if(event.keyCode == 8) {
+						finalPolygons.pop();
+					}
 					if(event.keyCode == 32) {
 						spaceHeld = false;
 						for(var point of basePoints) {
@@ -169,6 +181,9 @@
 							if(!keysHeld.includes(i)) {
 								basePoints[i].visible = false;
 							}
+						}
+						for(var polygon of finalPolygons) {
+							scene.remove(polygon);
 						}
 						render();
 					}
